Fix handling of _JAVA_SR_SIGNUM

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b96
    • linux

      A user can set environment variable _JAVA_SR_SIGNUM to determine the signal to be used for suspend/resume, see http://www.oracle.com/technetwork/java/javase/signals-139944.html.

      When this variable is read, it is checked to be < _NSIG on linux, which is 65.
      Later, a signal handler already installed is saved to sigflags[]. As sigflags[] has size MAXSIGNUM==32, handlers are lost.

      Also fix handling of impossible _JAVA_SR_SIGNUM settings: issue a warning.

            Assignee:
            Goetz Lindenmaier
            Reporter:
            Goetz Lindenmaier
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: