8141529: Fix handling of _JAVA_SR_SIGNUM

Reviewed-by: dholmes, stuefe, dsamersoff