hotspot/src/os/bsd/vm/os_bsd.hpp
@@ -40,10 +40,6 @@ class Bsd {
   friend class os;
 
   // For signal-chaining
-#define MAXSIGNUM 32
-  static struct sigaction sigact[MAXSIGNUM]; // saved preinstalled sigactions
-  static unsigned int sigs;             // mask of signals that have
-                                        // preinstalled signal handlers
   static bool libjsig_is_loaded;        // libjsig that interposes sigaction(),
                                         // __sigaction(), signal() is loaded
   static struct sigaction *(*get_signal_action)(int);
@@ -51,9 +47,6 @@ class Bsd {
   static void save_preinstalled_handler(int, struct sigaction&);
 
   static void check_signal_handler(int sig);
-
-  // For signal flags diagnostics
-  static int sigflags[MAXSIGNUM];
 
 #ifdef __APPLE__
   // mach_absolute_time
